Fix interrupts during Ractor#select

Fixes [Bug #20168]